--- a/BMI-CALCULATOR/index.html
+++ b/BMI-CALCULATOR/index.html
@@ -1,15 +1,16 @@
-<!--BMI CALCULATOR-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI Calculator</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="design.css" >
     <script src="logic.js"></script>
 </head>
 <body>
-    <div style="text-align: center; margin-top: 150px;">
+    <h1>BODY MASS INDEX</h1>
+    <h3>CALCULATOR</h3>
+    <div >
        <p>Height(in m)</p> 
         <input type="text" id="height" oninput="getValues()">
         <p>Weight(in kg)</p>
@@ -17,7 +18,8 @@
         <br>
         <input type="text" id="output" readonly>
         <br>
-        <button class="btn btn-primary" onclick="calculate()">CALCULATE BMI</button>
+        <button onclick="calculate()">CALCULATE BMI</button>
+        <button onclick="clearAll()">CLEAR</button>
         <p id="statement"></p>
         
     </div>
